Update SupplyChainService.java